--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <nav class="nav">
       <a class="nav-link active" aria-current="page" href="/index.html">Me</a>
-      <a class="nav-link" href="/hobbies.html">Hobbies</a>
+      <a class="nav-link" href="hobbies.html">Hobbies</a>
       <a class="nav-link" href="/family.html">Family</a>
       <a class="nav-link" href="/victims.html">Victim</a>
       <a class="nav-link" href="/recipes.html">Recipes</a>
