--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <nav class="nav">
       <a class="nav-link active" aria-current="page" href="/index.html">Me</a>
-      <a class="nav-link" href="hobbies.html">Hobbies</a>
-      <a class="nav-link" href="/family.html">Family</a>
-      <a class="nav-link" href="/victims.html">Victim</a>
-      <a class="nav-link" href="/recipes.html">Recipes</a>
+      <a class="nav-link" href="https://learner1unknown.github.io/reubenfrith/hobbies.html">Hobbies</a>
+      <a class="nav-link" href="https://learner1unknown.github.io/reubenfrith/family.html">Family</a>
+      <a class="nav-link" href="https://learner1unknown.github.io/reubenfrith/victims.html">Victim</a>
+      <a class="nav-link" href="https://learner1unknown.github.io/reubenfrith/recipes.html">Recipes</a>
     </nav>
     <body>
         <h1> Hi my name's Lucy</h1>
